--- a/Test/Dockerfile
+++ b/Test/Dockerfile
@@ -7,8 +7,11 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt gunicorn
+# Install any needed packages specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Install Gunicorn
+RUN pip install gunicorn
 
 # Make port 8080 available to the world outside this container
 EXPOSE 8080
